Fix line spacing and wrapping in code examples

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -12,3 +12,8 @@ ol {
 .full-single-article p img{
   width: 100%;
 }
+
+code span.line{
+  white-space: nowrap;
+  display: list-item; /* TODO: A better way to handle wraping? */
+}
